# kinmonJSS

./: .gitignore  CMakeLists.txt  Doxyfile
src/: config.c  config.h
src/algos/: algo.h
src/algos/GeneticAlgo/: GARandGenerate.c  GARandGenerate.h  GAfile.c  GAfile.h  geneAlgo.c  geneAlgo.h
src/algos/bigant/: bigant.c  bigant.h
src/algos/gme/: gme.c  gme.h  stack.c  stack.h
src/cli/: cli.c  cli.h
src/entries/: console.c
src/readers/: dataset.c  dataset.h  dataset2.c  dataset2.h  reader.h  standard.c  standard.h
src/utils/: dump_jss_input.c  dump_jss_input.h  logger.h
